--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		show()：将元素的display样式改为先前的显示状态。
 		toggle()：切换元素的可见状态：如果元素时可见的，则切换为隐藏；如果元素时隐藏的，则切换为可见的。
 
-		2.通过设置透明度效果的隐藏与显示，达到淡入淡出的动画效果
+		2.通过设置透明度效果的隐藏与显示，达到淡入淡出的动画效果aaaaaaaaaaaaaaa
 		fadeIn()，fadeOut()：只改变元素的透明度。fadeOut() 会在指定的一段时间内降低元素的不透明度，直到元素完全消失。fadeIn()
 		则相反。如，用600毫秒缓慢的将段落淡入：$("p").fadeIn("slow");。
 		fadeTo()：把不透明度以渐近的方式调整到指定的值(0 – 1 之间)。并在动画完成后可选地触发一个回调函数。如，用200毫秒快速将段落的透明度调整到0.25，动画结束后，显示一个“Animation
